--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,100 @@
-streamlit==1.8.1
-pandas==1.2.4
-numpy==1.20.1
-scikit-learn==0.24.1
+altair==4.2.2
+async-generator==1.10
+attrs==23.1.0
+backports.zoneinfo==0.2.1
+beautifulsoup4==4.12.2
+blinker==1.6.2
+Brotli==1.0.9
+bs4==0.0.1
+cachetools==5.3.0
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==2.0.12
+click==8.1.3
+colorama==0.4.6
+configparser==5.3.0
+crayons==0.4.0
+cryptography==40.0.2
+Cython==0.29.34
+decorator==5.1.1
+entrypoints==0.4
+exceptiongroup==1.1.1
+fake-headers==1.0.2
+gitdb==4.0.10
+GitPython==3.1.31
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+html5lib==1.1
+hyperframe==6.0.1
+idna==3.4
+importlib-metadata==6.6.0
+importlib-resources==5.12.0
+Jinja2==3.1.2
+joblib==1.2.0
+jsonschema==4.17.3
+kaitaistruct==0.10
+lxml==4.9.2
+markdown-it-py==2.2.0
+MarkupSafe==2.1.2
+mdurl==0.1.2
+numpy==1.21.6
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+outcome==1.2.0
+packaging==23.1
+pandas==1.3.5
+Pillow==9.5.0
+pkg_resources==0.0.0
+pkgutil_resolve_name==1.3.10
+protobuf==3.20.3
+psutil==5.9.5
+pyarrow==11.0.0
+pyasn1==0.5.0
+pycparser==2.21
+pydeck==0.8.1b0
+Pygments==2.15.1
+Pympler==1.0.1
+pyOpenSSL==23.1.1
+pyparsing==3.0.9
+pyrsistent==0.19.3
+PySocks==1.7.1
+python-dateutil==2.8.2
+pytz==2023.3
+pytz-deprecation-shim==0.1.0.post0
+requests==2.27.1
+rich==13.3.4
+scikit-learn==1.0.2
+scipy==1.7.3
+selenium==4.7.0
+selenium-wire==5.1.0
+six==1.16.0
+smmap==5.0.0
+sniffio==1.3.0
+snscrape==0.3.4
+sortedcontainers==2.4.0
+soupsieve==2.4.1
+streamlit==1.21.0
+threadpoolctl==3.1.0
+toml==0.10.2
+toolz==0.12.0
+torch==1.13.1
+torch-geometric==2.3.0
+tornado==6.2
+tqdm==4.65.0
+trio==0.22.0
+trio-websocket==0.10.2
+twitter-scraper-selenium==4.1.4
+typing_extensions==4.5.0
+tzdata==2023.3
+tzlocal==4.3
+urllib3==1.26.15
+validators==0.20.0
+watchdog==3.0.0
+webdriver-manager==3.2.2
+webencodings==0.5.1
+wsproto==1.2.0
+zipp==3.15.0
+zstandard==0.21.0
